--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity">
-
-        </activity>
-        <activity android:name=".SearchActivity">
-
-        </activity>
-
+        <activity android:name=".ShowCurseActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".CurseActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
