--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".OraseActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SearchActivity"/>
+        <activity android:name=".UsersActivity" ></activity>
         <activity android:name=".CurseActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -21,7 +22,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
 </manifest>
