fix project and firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         <activity android:name=".OraseActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SearchActivity"/>
-        <activity android:name=".UsersActivity" ></activity>
+        <activity android:name=".UsersClass" ></activity>
+        <activity android:name=".ShowCurseActivity" ></activity>
         <activity android:name=".CurseActivity"></activity>
+        <activity android:name=".DetailsUsers"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
